--- a/_includes/swc/intro.html
+++ b/_includes/swc/intro.html
@@ -1,4 +1,4 @@
-<p>
+<!-- <p>
   <a href="{{site.swc_site}}">Software Carpentry</a>
   aims to help researchers get their work done
   in less time and with less pain
@@ -14,5 +14,42 @@
     For more information on what we teach and why,
     please see our paper
     "<a href="https://doi.org/10.1371/journal.pbio.1001745">Best Practices for Scientific Computing</a>".
+  </em>
+</p> -->
+<p>
+  The KAUST Visualization Lab is hosting an <em>Introduction to Python for Data Science</em> workshop. 
+  Visualization lab staff will provide an introduction to Python for data science designed for 
+  learners with little or no previous programming experience.
+</p>
+<p>
+  Topics covered will include
+</p>
+<ul>
+  <li>Basics of programming in Python</li>
+  <li>Basics of Python Data Science libraries including <a href="http://jupyter.org/">Jupyter</a>, <a href="http://www.numpy.org/ ">Numpy</a>, <a href="https://pandas.pydata.org/">Pandas</a>, and <a href="https://matplotlib.org/">Matplotlib</a></li>
+  <li>Next steps for more advanced training in Python for data science.</li>
+</ul>
+
+<p>
+  This hands-on lesson is part of the <em>Introduction to Data Science Workshop Series</em> 
+  being offered by KVL as part of our on-going efforts to build 
+  capacity in core data science skills both at KAUST and within the Kingdom of Saudi Arabia (KSA). 
+</p>
+<p>
+  The workshop curriculum largely follows the 
+  <a href="https://swcarpentry.github.io/python-novice-inflammation/">curriculum</a> developed by 
+  <a href="{{site.swc_site}}">Software Carpentry</a>, a volunteer project dedicated to helping 
+  researchers get their work done in less time and with less pain by teaching them basic research 
+  computing skills.
+</p>
+<p>
+  This is a live-coding based workshop and learners are expected to work along with the instructor using freely 
+  available cloud resources provided by the <a href="https://mybinder.readthedocs.io/en/latest/">Binder</a> project.
+</p>
+    
+<p align="center">
+  <em>
+    For more information on what Software Carpentry teaches and why, please see their paper
+    "<a href="http://journals.plos.org/plosbiology/article?id=10.1371/journal.pbio.1001745">Best Practices for Scientific Computing</a>".
   </em>
 </p>
