--- a/_includes/swc/schedule.html
+++ b/_includes/swc/schedule.html
@@ -1,4 +1,4 @@
-<div class="row">
+<!-- <div class="row">
   <div class="col-md-6">
     <h3>Day 1</h3>
     <table class="table table-striped">
@@ -27,6 +27,20 @@
       <tr> <td>16:00</td>  <td>Wrap-up</td> </tr>
       <tr> <td>16:30</td>  <td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank" rel="noopener noreferrer">Post-workshop Survey</a></td> </tr>
       <tr> <td>16:40</td>  <td>END</td> </tr>
+    </table>
+  </div>
+</div> -->
+<div class="row">
+  <div class="col-md-6">
+    <h3>Day 1</h3>
+    <table class="table table-striped">
+      <!-- <tr> <td>Before</td> <td><a href="{{ site.swc_pre_survey }}{{ site.github.project_title }}">Pre-workshop survey</a> </td> </tr> -->
+      <tr> <td>14:00</td>  <td>Introduction to Python and Pandas</td> </tr>
+      <tr> <td>14:30</td>  <td>Afternoon break</td> </tr>
+      <tr> <td>15:45</td>  <td>Building Programs with Python</td> </tr>
+      <tr> <td>15:30</td>  <td>Wrap-up</td> </tr>
+      <tr> <td>16:00</td>  <td>END</td> </tr>
+      <!-- <tr> <td>After</td> <td><a href="https://kaustforms.formstack.com/forms/intro_python_for_data_science_fall_2022_feedback">Post-workshop survey</a> </td> </tr>       -->
     </table>
   </div>
 </div>
